Grammar/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.11 from Grammar/Par.y
-----------------------------------------------------------------------------


rule 38 is unused
rule 39 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProg_internal -> Prog                      (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Prog -> ListTopDefVar ListTopDef 'Main' '{' Blok '}'   (4)
	TopDefVar -> 'create' '(' Type Ident ')' ';'       (5)
	ListTopDefVar ->                                   (6)
	ListTopDefVar -> TopDefVar ListTopDefVar           (7)
	TopDef -> Type Ident '(' ListArg ')' '{' Blok '}'   (8)
	ListTopDef ->                                      (9)
	ListTopDef -> TopDef ListTopDef                    (10)
	Arg -> Type Ident                                  (11)
	Arg -> '&' Type Ident                              (12)
	ListArg ->                                         (13)
	ListArg -> Arg                                     (14)
	ListArg -> Arg ',' ListArg                         (15)
	Blok -> ListStmt                                   (16)
	ListStmt ->                                        (17)
	ListStmt -> Stmt ListStmt                          (18)
	Stmt -> ';'                                        (19)
	Stmt -> 'create' '(' Type Ident ')' ';'            (20)
	Stmt -> Type Ident '=' Expr ';'                    (21)
	Stmt -> Type Ident '++' ';'                        (22)
	Stmt -> Type Ident '--' ';'                        (23)
	Stmt -> 'return' Expr ';'                          (24)
	Stmt -> 'return' ';'                               (25)
	Stmt -> 'if' Expr 'then' ListStmt 'endif'          (26)
	Stmt -> 'if' Expr 'then' ListStmt 'else' ListStmt 'endif'   (27)
	Stmt -> 'while' Expr 'then' ListStmt 'endwhile'    (28)
	Stmt -> 'for' Type Ident '=' Expr 'to' Expr 'then' ListStmt 'endfor'   (29)
	Stmt -> Expr ';'                                   (30)
	Stmt -> 'continue' ';'                             (31)
	Stmt -> 'break' ';'                                (32)
	Stmt -> 'print' '(' Expr ')' ';'                   (33)
	Type -> '$'                                        (34)
	Type -> '#'                                        (35)
	Type -> '\''                                       (36)
	Type -> '@'                                        (37)
	ListType -> Type                                   (38)
	ListType -> Type ',' ListType                      (39)
	Expr6 -> Type Ident                                (40)
	Expr6 -> Integer                                   (41)
	Expr6 -> 'True'                                    (42)
	Expr6 -> 'False'                                   (43)
	Expr6 -> Type Ident '(' ListExpr ')'               (44)
	Expr6 -> String                                    (45)
	Expr6 -> '(' Expr ')'                              (46)
	Expr5 -> '-' Expr6                                 (47)
	Expr5 -> '!' Expr6                                 (48)
	Expr5 -> Expr6                                     (49)
	Expr4 -> Expr4 MulOp Expr5                         (50)
	Expr4 -> Expr5                                     (51)
	Expr3 -> Expr3 AddOp Expr4                         (52)
	Expr3 -> Expr4                                     (53)
	Expr2 -> Expr2 RelOp Expr3                         (54)
	Expr2 -> Expr3                                     (55)
	Expr1 -> Expr2 '&&' Expr1                          (56)
	Expr1 -> Expr2                                     (57)
	Expr -> Expr1 '||' Expr                            (58)
	Expr -> Expr1                                      (59)
	ListExpr ->                                        (60)
	ListExpr -> Expr                                   (61)
	ListExpr -> Expr ',' ListExpr                      (62)
	AddOp -> '+'                                       (63)
	AddOp -> '-'                                       (64)
	MulOp -> '*'                                       (65)
	MulOp -> '/'                                       (66)
	MulOp -> '%'                                       (67)
	RelOp -> '<'                                       (68)
	RelOp -> '<='                                      (69)
	RelOp -> '>'                                       (70)
	RelOp -> '>='                                      (71)
	RelOp -> '=='                                      (72)
	RelOp -> '!='                                      (73)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'#'            { PT _ (TS _ 3) }
	'$'            { PT _ (TS _ 4) }
	'%'            { PT _ (TS _ 5) }
	'&'            { PT _ (TS _ 6) }
	'&&'           { PT _ (TS _ 7) }
	'\''           { PT _ (TS _ 8) }
	'('            { PT _ (TS _ 9) }
	')'            { PT _ (TS _ 10) }
	'*'            { PT _ (TS _ 11) }
	'+'            { PT _ (TS _ 12) }
	'++'           { PT _ (TS _ 13) }
	','            { PT _ (TS _ 14) }
	'-'            { PT _ (TS _ 15) }
	'--'           { PT _ (TS _ 16) }
	'/'            { PT _ (TS _ 17) }
	';'            { PT _ (TS _ 18) }
	'<'            { PT _ (TS _ 19) }
	'<='           { PT _ (TS _ 20) }
	'='            { PT _ (TS _ 21) }
	'=='           { PT _ (TS _ 22) }
	'>'            { PT _ (TS _ 23) }
	'>='           { PT _ (TS _ 24) }
	'@'            { PT _ (TS _ 25) }
	'False'        { PT _ (TS _ 26) }
	'Main'         { PT _ (TS _ 27) }
	'True'         { PT _ (TS _ 28) }
	'break'        { PT _ (TS _ 29) }
	'continue'     { PT _ (TS _ 30) }
	'create'       { PT _ (TS _ 31) }
	'else'         { PT _ (TS _ 32) }
	'endfor'       { PT _ (TS _ 33) }
	'endif'        { PT _ (TS _ 34) }
	'endwhile'     { PT _ (TS _ 35) }
	'for'          { PT _ (TS _ 36) }
	'if'           { PT _ (TS _ 37) }
	'print'        { PT _ (TS _ 38) }
	'return'       { PT _ (TS _ 39) }
	'then'         { PT _ (TS _ 40) }
	'to'           { PT _ (TS _ 41) }
	'while'        { PT _ (TS _ 42) }
	'{'            { PT _ (TS _ 43) }
	'||'           { PT _ (TS _ 44) }
	'}'            { PT _ (TS _ 45) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProg_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Prog            rule  4
	TopDefVar       rule  5
	ListTopDefVar   rules 6, 7
	TopDef          rule  8
	ListTopDef      rules 9, 10
	Arg             rules 11, 12
	ListArg         rules 13, 14, 15
	Blok            rule  16
	ListStmt        rules 17, 18
	Stmt            rules 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33
	Type            rules 34, 35, 36, 37
	ListType        rules 38, 39
	Expr6           rules 40, 41, 42, 43, 44, 45, 46
	Expr5           rules 47, 48, 49
	Expr4           rules 50, 51
	Expr3           rules 52, 53
	Expr2           rules 54, 55
	Expr1           rules 56, 57
	Expr            rules 58, 59
	ListExpr        rules 60, 61, 62
	AddOp           rules 63, 64
	MulOp           rules 65, 66, 67
	RelOp           rules 68, 69, 70, 71, 72, 73

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'#'            reduce using rule 6
	'$'            reduce using rule 6
	'\''           reduce using rule 6
	'@'            reduce using rule 6
	'Main'         reduce using rule 6
	'create'       shift, and enter state 6

	Prog           goto state 3
	TopDefVar      goto state 4
	ListTopDefVar  goto state 5

State 1


	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'then'         reduce using rule 1
	'to'           reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProg_internal -> Prog .                     (rule 0)

	%eof           accept


State 4

	ListTopDefVar -> TopDefVar . ListTopDefVar          (rule 7)

	'#'            reduce using rule 6
	'$'            reduce using rule 6
	'\''           reduce using rule 6
	'@'            reduce using rule 6
	'Main'         reduce using rule 6
	'create'       shift, and enter state 6

	TopDefVar      goto state 4
	ListTopDefVar  goto state 15

State 5

	Prog -> ListTopDefVar . ListTopDef 'Main' '{' Blok '}'    (rule 4)

	'#'            shift, and enter state 11
	'$'            shift, and enter state 12
	'\''           shift, and enter state 13
	'@'            shift, and enter state 14
	'Main'         reduce using rule 9

	TopDef         goto state 8
	ListTopDef     goto state 9
	Type           goto state 10

State 6

	TopDefVar -> 'create' . '(' Type Ident ')' ';'      (rule 5)

	'('            shift, and enter state 7


State 7

	TopDefVar -> 'create' '(' . Type Ident ')' ';'      (rule 5)

	'#'            shift, and enter state 11
	'$'            shift, and enter state 12
	'\''           shift, and enter state 13
	'@'            shift, and enter state 14

	Type           goto state 19

State 8

	ListTopDef -> TopDef . ListTopDef                   (rule 10)

	'#'            shift, and enter state 11
	'$'            shift, and enter state 12
	'\''           shift, and enter state 13
	'@'            shift, and enter state 14
	'Main'         reduce using rule 9

	TopDef         goto state 8
	ListTopDef     goto state 18
	Type           goto state 10

State 9

	Prog -> ListTopDefVar ListTopDef . 'Main' '{' Blok '}'    (rule 4)

	'Main'         shift, and enter state 17


State 10

	TopDef -> Type . Ident '(' ListArg ')' '{' Blok '}'    (rule 8)

	L_Ident        shift, and enter state 2

	Ident          goto state 16

State 11

	Type -> '#' .                                       (rule 35)

	L_Ident        reduce using rule 35


State 12

	Type -> '$' .                                       (rule 34)

	L_Ident        reduce using rule 34


State 13

	Type -> '\'' .                                      (rule 36)

	L_Ident        reduce using rule 36


State 14

	Type -> '@' .                                       (rule 37)

	L_Ident        reduce using rule 37


State 15

	ListTopDefVar -> TopDefVar ListTopDefVar .          (rule 7)

	'#'            reduce using rule 7
	'$'            reduce using rule 7
	'\''           reduce using rule 7
	'@'            reduce using rule 7
	'Main'         reduce using rule 7


State 16

	TopDef -> Type Ident . '(' ListArg ')' '{' Blok '}'    (rule 8)

	'('            shift, and enter state 22


State 17

	Prog -> ListTopDefVar ListTopDef 'Main' . '{' Blok '}'    (rule 4)

	'{'            shift, and enter state 21


State 18

	ListTopDef -> TopDef ListTopDef .                   (rule 10)

	'Main'         reduce using rule 10


State 19

	TopDefVar -> 'create' '(' Type . Ident ')' ';'      (rule 5)

	L_Ident        shift, and enter state 2

	Ident          goto state 20

State 20

	TopDefVar -> 'create' '(' Type Ident . ')' ';'      (rule 5)

	')'            shift, and enter state 56


State 21

	Prog -> ListTopDefVar ListTopDef 'Main' '{' . Blok '}'    (rule 4)

	'!'            shift, and enter state 40
	'#'            shift, and enter state 11
	'$'            shift, and enter state 12
	'\''           shift, and enter state 13
	'('            shift, and enter state 41
	'-'            shift, and enter state 42
	';'            shift, and enter state 43
	'@'            shift, and enter state 14
	'False'        shift, and enter state 44
	'True'         shift, and enter state 45
	'break'        shift, and enter state 46
	'continue'     shift, and enter state 47
	'create'       shift, and enter state 48
	'for'          shift, and enter state 49
	'if'           shift, and enter state 50
	'print'        shift, and enter state 51
	'return'       shift, and enter state 52
	'while'        shift, and enter state 53
	'}'            reduce using rule 17
	L_integ        shift, and enter state 54
	L_quoted       shift, and enter state 55

	Integer        goto state 27
	String         goto state 28
	Blok           goto state 29
	ListStmt       goto state 30
	Stmt           goto state 31
	Type           goto state 32
	Expr6          goto state 33
	Expr5          goto state 34
	Expr4          goto state 35
	Expr3          goto state 36
	Expr2          goto state 37
	Expr1          goto state 38
	Expr           goto state 39

State 22

	TopDef -> Type Ident '(' . ListArg ')' '{' Blok '}'    (rule 8)

	'#'            shift, and enter state 11
	'$'            shift, and enter state 12
	'&'            shift, and enter state 26
	'\''           shift, and enter state 13
	')'            reduce using rule 13
	'@'            shift, and enter state 14

	Arg            goto state 23
	ListArg        goto state 24
	Type           goto state 25

State 23

	ListArg -> Arg .                                    (rule 14)
	ListArg -> Arg . ',' ListArg                        (rule 15)

	')'            reduce using rule 14
	','            shift, and enter state 94


State 24

	TopDef -> Type Ident '(' ListArg . ')' '{' Blok '}'    (rule 8)

	')'            shift, and enter state 93


State 25

	Arg -> Type . Ident                                 (rule 11)

	L_Ident        shift, and enter state 2

	Ident          goto state 92

State 26

	Arg -> '&' . Type Ident                             (rule 12)

	'#'            shift, and enter state 11
	'$'            shift, and enter state 12
	'\''           shift, and enter state 13
	'@'            shift, and enter state 14

	Type           goto state 91

State 27

	Expr6 -> Integer .                                  (rule 41)

	'!='           reduce using rule 41
	'%'            reduce using rule 41
	'&&'           reduce using rule 41
	')'            reduce using rule 41
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	','            reduce using rule 41
	'-'            reduce using rule 41
	'/'            reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'then'         reduce using rule 41
	'to'           reduce using rule 41
	'||'           reduce using rule 41


State 28

	Expr6 -> String .                                   (rule 45)

	'!='           reduce using rule 45
	'%'            reduce using rule 45
	'&&'           reduce using rule 45
	')'            reduce using rule 45
	'*'            reduce using rule 45
	'+'            reduce using rule 45
	','            reduce using rule 45
	'-'            reduce using rule 45
	'/'            reduce using rule 45
	';'            reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'=='           reduce using rule 45
	'>'            reduce using rule 45
	'>='           reduce using rule 45
	'then'         reduce using rule 45
	'to'           reduce using rule 45
	'||'           reduce using rule 45


State 29

	Prog -> ListTopDefVar ListTopDef 'Main' '{' Blok . '}'    (rule 4)

	'}'            shift, and enter state 90


State 30

	Blok -> ListStmt .                                  (rule 16)

	'}'            reduce using rule 16


State 31

	ListStmt -> Stmt . ListStmt                         (rule 18)

	'!'            shift, and enter state 40
	'#'            shift, and enter state 11
	'$'            shift, and enter state 12
	'\''           shift, and enter state 13
	'('            shift, and enter state 41
	'-'            shift, and enter state 42
	';'            shift, and enter state 43
	'@'            shift, and enter state 14
	'False'        shift, and enter state 44
	'True'         shift, and enter state 45
	'break'        shift, and enter state 46
	'continue'     shift, and enter state 47
	'create'       shift, and enter state 48
	'else'         reduce using rule 17
	'endfor'       reduce using rule 17
	'endif'        reduce using rule 17
	'endwhile'     reduce using rule 17
	'for'          shift, and enter state 49
	'if'           shift, and enter state 50
	'print'        shift, and enter state 51
	'return'       shift, and enter state 52
	'while'        shift, and enter state 53
	'}'            reduce using rule 17
	L_integ        shift, and enter state 54
	L_quoted       shift, and enter state 55

	Integer        goto state 27
	String         goto state 28
	ListStmt       goto state 89
	Stmt           goto state 31
	Type           goto state 32
	Expr6          goto state 33
	Expr5          goto state 34
	Expr4          goto state 35
	Expr3          goto state 36
	Expr2          goto state 37
	Expr1          goto state 38
	Expr           goto state 39

State 32

	Stmt -> Type . Ident '=' Expr ';'                   (rule 21)
	Stmt -> Type . Ident '++' ';'                       (rule 22)
	Stmt -> Type . Ident '--' ';'                       (rule 23)
	Expr6 -> Type . Ident                               (rule 40)
	Expr6 -> Type . Ident '(' ListExpr ')'              (rule 44)

	L_Ident        shift, and enter state 2

	Ident          goto state 88

State 33

	Expr5 -> Expr6 .                                    (rule 49)
